--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
   <header>
+    <div class="btn">
+      <a href="index.html">
+        <img src="Img/logo-weg-white.png">
+      </a>
+    </div>
+    <input type="checkbox" id="btn_menu">
+    <label for="btn_menu" style="color:white;" >&#8801;</label>
     <div class="menu">
       <a href="index.html">
         <img src="Img/logo-weg-white.png">
@@ -18,9 +25,9 @@
   </header>
   <main class="main">
     <a href="https://www.weg.net/institutional/BR/pt/career/centroweg" target="_blank">
-      <center>
-        <img src="Img/WEGMAIN.png" title="CENTROWEG" alt="Logo CentroWeg">
-      </center>
+      <div id="mainImage">
+        <img src="Img/WEGMAIN.png" title="Weg" alt="Logo Weg">
+      </div>
     </a>
 
     <hr><br>
